--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <table cellpadding="10"  bgcolor="#eddsbd">
         <tr>
             <td><a name="HOME"><img src="logo-com-alça.png" width="130" height="108">&nbsp;&nbsp;&nbsp;</a></td>
-            <td><img src="cafe.png" width="195" height="105">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><img src="paginas web/cafe.png" width="195" height="105">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
             <td><img src="pesquisa.png" width="600" height="108"></td>
             <td><img src="usuarioconta.png" width="190" height="100">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
